# Lible

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in  basic_usage.rst  conf.py  dox_test.rst  index.rst  installation.rst  integrals.rst  integrals_api.rst  integrals_definitions.rst  integrals_introduction.rst  integrals_main_interface.rst  integrals_tutorial.rst  ints.rst  modules.rst  molecular_integrals.rst  solvers.rst  types.rst  utilities.rst
docs/figs/: ints_headers-figure0.md5  ints_headers.tex
docs/ints/: conventions.rst  definitions.rst  ints.rst  shell.rst  spdata.rst  structure.rst
src/: CMakeLists.txt  LibleConfig.cmake
src/davidson/: CMakeLists.txt  davidson.cpp  davidson.h  davidson_settings.h
src/davidson/lible/: davidson.h
src/geomopt/: CMakeLists.txt  bfgs.cpp  defs_geomopt.h  gdescent.cpp  gdiis.cpp  geometry.cpp  geometry.h  geomopt.cpp  geomopt.h  geomopt_impl.h  geomopt_include.h  geomopt_utils.cpp  geomopt_utils.h  kriging.cpp
src/gugaci/: CMakeLists.txt  cipsi.cpp  configuration.cpp  connections.cpp  coupling_coeffs.cpp  diagonal.cpp  gci.cpp  gci_impl.cpp  gci_para.cpp  gci_util.cpp  guess.cpp  guga_sci.cpp  prefix_algorithm.cpp  sigma.cpp  test.cpp
src/gugaci/lible/: cipsi.h  cipsi.hpp  configuration.h  connections.h  coupling_coeffs.h  csftree.h  gci.h  gci.hpp  gci_impl.hpp  gci_settings.h  gci_util.h  gci_util.hpp  guga_sci.h  prefix_algorithm.h  wave_function.h  wave_function.hpp
src/gugasci/: cipsi.cpp  cipsi.h  configuration.cpp  configuration.h  configurationtree.h  connections.cpp  connections.h  coupling_coeffs.cpp  coupling_coeffs.h  csftree.h  diagonal.cpp  guess.cpp  gugaci.cpp  gugaci.h  gugaci_settings.h  gugaci_util.cpp  gugaci_util.h  prefix_algorithm.cpp  prefix_algorithm.h  sigma.cpp  wave_function.h
src/ints/: CMakeLists.txt  basis_families.cpp  basis_tools.cpp  defs.h  defs_ints.h  ints.cpp  ints.h  ints_impl.h  ints_include.h  ints_util.cpp  ints_util.h  kernel_1el_ints.h  kernels_1el_ints.h  mcmurchie_davidson.cpp  oneel_impl.cpp  overlap_ints.cpp  return_spherical_trafo.cpp  shell.cpp  shell.h  shell_pair_data.cpp  spherical_trafo.cpp  spherical_trafo.h  structure.cpp  structure.h
src/ints/basis/ahlrichs/: ahlrichs-vdz.txt  def2-qzvp.txt  def2-tzvpp.txt  def2-tzvppd.txt
src/ints/basis/sto/: sto-2g.txt  sto-4g.txt
src/ints/experimental/: oneel_detail_gpu.hpp  overlap_gpu.cpp  overlap_ints_gpu.cpp  structure_gpu.cpp  structure_gpu.h
src/ints/lible/: basis_sets.hpp  ints.h  ints.hpp  ints_defs.hpp  ints_util.hpp  mcmurchie_davidson.h  mcmurchie_davidson.hpp  oneel_detail.hpp  oneel_impl.h  oneel_impl.hpp  shell.h  shell.hpp  shell_pair_data.h  shell_pair_data.hpp  spherical_trafo.h  spherical_trafo.hpp  structure.h  structure.hpp  twoel_detail.hpp
src/ints/one_el_ints/: kinetic.cpp  nuclear_attraction.cpp  overlap.cpp
src/ints/two_el_ints/: eri4.cpp
src/lible/: brain.cpp  brain.hpp  log.cpp  log.cpp.depr  log.hpp  log.hpp.depr  types.cpp  types.hpp  util.hpp  vec2d.hpp  vec3d.hpp  vec4d.hpp  vectormd.hpp
src/lible/davidson/: davidson.cpp
src/lible/geomopt/: bfgs.cpp  defs_geomopt.h  gdescent.cpp  gdiis.cpp  geomopt.cpp  geomopt.h  geomopt.hpp  geomopt_impl.h  kriging.cpp  utils.cpp  utils.hpp
src/lible/gugaci/: cipsi.cpp  cipsi.hpp  configuration.cpp  configuration.hpp  configurationtree.hpp  connections.cpp  connections.hpp  coupling_coeffs.cpp  coupling_coeffs.hpp  diagonal.cpp  gci.cpp  gci.hpp  gci_impl.cpp  gci_impl.hpp  gci_para.cpp  gci_para.hpp  gci_util.cpp  gci_util.hpp  guess.cpp  prefix_algorithm.cpp  prefix_algorithm.hpp  sigma.cpp  wave_function.hpp
src/lible/ints/: basis_families.cpp  basis_sets.cpp  basis_sets.hpp  boys_function.cpp  boys_function.hpp  cart_exps.hpp  defs.hpp  ecoeffs.cpp  ecoeffs.hpp  ints.cpp  ints.cpp.depr  ints.hpp  ints_util.cpp  ints_util.hpp  kernels_1el_ints.hpp  mcmurchie_davidson.cpp  mcmurchie_davidson.hpp  oneelints.cpp  rints.cpp  rints.hpp  rints_meta.cpp  rints_meta.hpp  shell.cpp  shell.hpp  shell_pair_data.cpp  shell_pair_data.hpp  spherical_trafo.cpp  spherical_trafo.hpp  structure.cpp  structure.hpp  util.cpp  utils.cpp  utils.hpp
src/lible/ints/aux_basis/ahlrichs/: def2-qzvppd-rifit.txt  def2-sv(p)-jkfit.txt  def2-sv(p)-rifit.txt  def2-tzvpd-rifit.txt  def2-tzvpp-rifit.txt
src/lible/ints/basis/ahlrichs/: ahlrichs-tzv.txt  ahlrichs-vtz.txt  def2-qzvpd.txt  def2-qzvpp.txt  def2-sv(p).txt
src/lible/ints/basis/ano/: ano-dk3.txt  ano-pvqz.txt  ano-pvtz.txt  ano-r0.txt  ano-r1.txt  ano-r3.txt  ano-rcc-mb.txt  ano-rcc-vtz.txt  ano-rcc.txt  aug-ano-pvqz.txt  nasa-ames-ano.txt  nasa-ames-ano2.txt  (+4 more)
src/lible/ints/experimental/: oneel_detail_gpu.hpp  overlap_gpu.cpp  structure_gpu.hpp
src/lible/ints/gpu/: dev_ecoeffs.hpp  dev_overlap.hpp  dev_utils.hpp  ecoeffs.cpp  gpuints.hpp  kernels_ecoeffs.hpp  kernels_utils.hpp  overlap.cpp  overlap_gpu.cpp  structure_gpu.hpp  utils.cpp  utils.hpp
src/lible/ints/oneel/: dipole.cpp  dipole.cpp.depr  kinetic.cpp  kinetic.cpp.depr  nuclear_attraction.cpp  nuclear_attraction.cpp.depr  oneel_detail.hpp  oneel_detail.hpp.depr  overlap.cpp  overlap.cpp.depr
src/lible/ints/twoel/: eri2.cpp  eri3.cpp  eri4.cpp  eri4_diagonal.cpp  eri4_kernel.hpp  eri4_kernels.cpp  eri4_libxsmm_wrapper.cpp  eri4_libxsmm_wrapper.hpp  eri4_shark.cpp  eri4_shark_flat.cpp  eri4_shark_libxsmm.cpp  eri4_shark_libxsmm.hpp  eri4kernel_libxsmm.cpp  eri4kernel_libxsmm.hpp  eri_kernel_funs.cpp  eri_kernel_funs.hpp  eri_kernels.cpp  eri_kernels.hpp  eri_kernels_deriv1.cpp  shark_mm_kernels.cpp  shark_mm_kernels.hpp  twoel_detail.hpp
src/lible/solver/: .solver.hpp.swp  conjugate_gradient.cpp  solver.cpp  solver.hpp
src/util/: CMakeLists.txt  brain.cpp  lible_types.cpp  lible_types.h  lible_util.h  log.cpp  types.cpp
src/util/lible/: brain.hpp  log.hpp  types.h  types.hpp  util.h  vec2d.hpp  vec3d.h  vec4d.h
test/: CMakeCache.txt  CMakeLists.txt  Makefile  available_basis_sets.hpp  cmake_install.cmake  main.cpp  testlible  testlible.cpp  tests.cpp  tests.hpp  tests_ints.cpp  tests_solver.cpp
(+1072 files in other folders)
